# agentic-journal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.backlog/: config.yml
.backlog/tasks/: task-1 - Backlog-workflow-baseline-ve-ajan-talimatlarini-stabilize-et.md  task-10 - Session-summary-kurulum-dokumani-ve-smoke-kontrollerini-stabilize-et.md  task-11 - Self-review-bulgularini-stabilize-et.md  task-12 - Redaction-yanlış-pozitiflerini-azalt-meşru-içeriği-bozan-sır-kalıpları.md  task-13 - Redaction-kapsamını-genişlet-tırnaklı-JSON-sırları-ve-ek-token-formatları.md  task-14 - Tekilleştirme-refactorlarını-tamamla-event-tipi-setleri-ve-label-session_key.md  task-15 - docs-event-schema.mdyi-doğrulama-düzeltmesi-ve-yeni-gizlilik-korumalarıyla-hizala.md  task-16 - Eksik-test-kapsamını-ekle-günlük-rapor-paylaşımı-web-bind-çıkış-kodu-izin-bitleri.md  task-17 - schema_version-migration-yolunu-tasarla.md  task-18 - write_event-rollbackını-çift-I-O-hatasına-karşı-sertleştir.md  task-19 - Rename-project-identity-to-agentic-journal.md  task-2 - Agent-Journal-uc-uca-smoke-ve-CI-stabilizasyonu-ekle.md  task-20 - Update-global-agentic-journal-install-and-wrappers.md  task-21 - Add-configurable-project-local-journal-mirrors-for-Cortex-panel-consumption.md  task-22 - Document-Agentic-Journal-MCP-semantic-quality-contract.md  task-23 - Add-container-level-smoke-for-Cortex-Agentic-Journal-MCP-integration.md  task-25 - Add-Agentic-Journal-model-operation-events.md  task-3 - Evidence-korelasyon-modelini-commit-ve-session-bazinda-guclendir.md  task-4 - Paketleme-ve-kurulum-yolunu-release-oncesi-sertlestir.md  task-5 - Journal-guard-ile-semantik-kayıt-zorlamasını-ekle.md  task-6 - Anlık-Agent-Journal-web-GUI-ekle.md  task-7 - GitHub-repo-sunumunu-ve-CI-akisini-hazirla.md  task-8 - Session-summary-event-modelini-ve-MCP-aracini-ekle.md  task-9 - Report-API-ve-Web-GUI-icin-oturum-ozet-gorunumunu-ekle.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: event-schema.md  improvement-plan.md  native-hooks.md  operations.md
scripts/: package-smoke.sh  release-check.sh  release_tools.py  verify.sh
scripts/hooks/: post-commit
scripts/wrappers/: agent-journal-wrapper.sh
src/agent_journal/: __init__.py  cli.py  config.py  diagnostics.py  events.py  git_context.py  install.py  mcp_server.py  report.py  security.py  storage.py  web.py
src/agentic_journal/: __init__.py  cli.py  config.py  diagnostics.py  events.py  git_context.py  git_hooks.py  install.py  mcp_server.py  project_config.py  report.py  security.py  storage.py  web.py
tasks/: lessons.md
tests/: test_cli.py  test_config.py  test_diagnostics.py  test_docs.py  test_events.py  test_git_context.py  test_install.py  test_mcp_server.py  test_package_smoke_script.py  test_release_tools.py  test_release_workflow.py  test_report.py  test_security.py  test_storage.py  test_verify_script.py  test_web.py
(+6 files in other folders)
