[project]
name = "agent-journal"
version = "0.1.0"
description = "Local observer-first activity journal for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.23",
]

[project.scripts]
agent-journal = "agent_journal.cli:entrypoint"
agent-journal-mcp = "agent_journal.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_journal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
