[project]
name = "agentic-journal"
version = "0.1.0"
description = "Local observer-first activity journal for AI coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.23",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/varienos/agentic-journal"
Documentation = "https://github.com/varienos/agentic-journal/tree/main/docs"
Issues = "https://github.com/varienos/agentic-journal/issues"

[project.scripts]
agentic-journal = "agentic_journal.cli:entrypoint"
agentic-journal-mcp = "agentic_journal.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_journal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
